# QtChatDB

./: README.md
main/: CMakeLists.txt  clientform.cpp  clientform.h  clientform.ui  config.cpp  config.h  database.cpp  database.h  loginform.cpp  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  serverform.cpp  serverform.h  serverform.ui  startscreen.cpp  startscreen.h  startscreen.ui
